basic server set up

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Angular Zeta</title>
+    <link rel="stylesheet" type="text/css" href="../vendors/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../styles/style.css"/>
 </head>
 <body>
-Angular
+<h1>Angular Zeta</h1>
 </body>
 </html>
